--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -1,3 +1,23 @@
 /* =============
     Buttons
 ============= */
+
+@mixin button($bg-color) {
+    background-color: $bg-color;
+    padding: 10px 30px;
+    transition: .3s;
+    color: $white;
+    text-decoration: none;
+    margin: 100px;
+
+    &:hover {
+        background-color: $darkblue;
+        transition: .3s;
+
+    }
+
+  
+
+
+
+}
