--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -1,3 +1,22 @@
 /* =============
     Typography
 ============= */
+
+@mixin headline () {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 300;
+    letter-spacing: 3px;
+    padding: 10px 0 20px;
+     
+}
+
+h1{
+    @include headline();
+    font-size:40px;
+    color: $lightpurple;
+}
+
+h2{
+    @include headline();
+    font-size: 35px;
+}
