--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -19,6 +19,16 @@ $screen-xl-min: 1200px;
 // Colors vars
 :root {
   --black: #000000;
-  --white: #ffffff;
+  --white: #fafafa;
+  
 }
+
+$lightgrey:#D9D9D9;
+$grey:#b1b1b1;
+$yellow:#ffd74b;
+$purple: #45294F;
+$lightpurple:rgba(69,41,79,.7);
+$pink:#D110A7;
+$darkblue:#3d418b;
+$lightestpurple:rgba(69,41,79,.2);
 
